video-mp3-microservice/src/rabbit/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: "not-applicable"
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - name: http    #access GUI
          protocol: TCP
          containerPort: 15672
        - name: amqp    #Advanced message queing protocol used to send messages to the queue
          protocol: TCP
          containerPort: 5672 
        volumeMounts:
          - mountPath: "/var/lib/rabbitmq"
            name: rabbitmq-volume
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
